--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            bed.coffee
-description:      the data life of @thejunglejane + @kenketier
+description:      the small data life of @thejunglejane + @kenketier
 logo:             site-logo.png
 disqus_shortname: 
 search:           true
