--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:              http://thejunglejane.github.io/bed.coffee
 # Owner/author information
 owner:
   name:           j s adams
-  avatar:         bio-photo.jpg
+  avatar:         bio-photo.png
   email:          jane@bed.coffee
   # Social networking links used in footer. Update and remove as you like.
   twitter:        https://twitter.com/thejunglejane    
