--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            bed.coffee
-description:      the small data life of <a href="https://twitter.com/thejunglejane/">@thejunglejane</a> + <a href="https://twitter.com/thejunglejane/">@kenkeiter</a>
+description:      the small data life of @thejunglejane + @kenkeiter
 logo:             site-logo.png
 disqus_shortname: 
 search:           true
