--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            bed.coffee
+title:            
 description:      the small data life of @thejunglejane + @kenkeiter
 logo:             site-logo.png
 disqus_shortname: 
