--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            
 description:      the small data life of @thejunglejane + @kenkeiter
-logo:             site-logo.png
+logo:             bio-photo.png
 disqus_shortname: 
 search:           true
 # Change url to your domain. Leave localhost server or blank when working locally.
