--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            bed.coffee
-description:      the small data life of @thejunglejane + @kenkeiter
+description:      the small data life of @thejunglejane
 logo:             bio-photo.png
 disqus_shortname: 
 search:           true
